# buyrandom3

./: .cruft.json  .cruft.json.orig  .readthedocs.yml  CHANGES.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: conda-package-deploy.yml  python-package-deploy-testpypi.yml  python-package-deploy.yml  python-test.yml
buyrandom3/: __init__.py  cli.py  core.py
conda.recipe/: meta.yaml  meta.yaml.orig
docs/: conf.py  environment.yaml  index.md  reference.md
docs/api/: buyrandom3.rst  modules.rst
docs/content/: usage.md
tests/: __init__.py  conftest.py  test_cli.py  test_core.py
